--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -1,11 +1,145 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="MfB-TK-Msa">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Login View Controller-->
+        <scene sceneID="Ees-9i-gTo">
+            <objects>
+                <viewController id="MfB-TK-Msa" customClass="LoginViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="lNU-hO-9Zq">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yfG-wS-gxb">
+                                <rect key="frame" x="99" y="307" width="177" height="53"/>
+                                <color key="backgroundColor" red="0.55866932989809936" green="0.79197098813856448" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="53" id="eg1-Ms-Ouy"/>
+                                    <constraint firstAttribute="width" constant="177" id="zQU-FM-mNW"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="34"/>
+                                <state key="normal" title="Login ">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="onLoginButton:" destination="MfB-TK-Msa" eventType="touchUpInside" id="hCY-m7-adQ"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="yfG-wS-gxb" firstAttribute="centerY" secondItem="lNU-hO-9Zq" secondAttribute="centerY" id="Aui-tu-oaE"/>
+                            <constraint firstItem="yfG-wS-gxb" firstAttribute="centerX" secondItem="lNU-hO-9Zq" secondAttribute="centerX" id="Hio-CL-ZPs"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="EVh-pc-jEv"/>
+                    </view>
+                    <connections>
+                        <segue destination="ylU-dJ-1dJ" kind="presentation" identifier="loginToHome" id="BP7-uD-KQI"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TAQ-HX-74I" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-903.20000000000005" y="-90.404797601199405"/>
+        </scene>
+        <!--Home-->
+        <scene sceneID="t8J-b1-T6Q">
+            <objects>
+                <tableViewController id="fRY-ms-m3U" customClass="HomeTableViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="QQt-WG-2Ks">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="120" id="m2a-Pm-GUI" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="120"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="m2a-Pm-GUI" id="59U-2g-Mdt">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="119.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ogx-RE-VCT">
+                                            <rect key="frame" x="10" y="0.0" width="65" height="65"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="65" id="BNi-2i-37H"/>
+                                                <constraint firstAttribute="height" constant="65" id="rJf-Qt-kOf"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="John Doe" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7qy-UT-MZf">
+                                            <rect key="frame" x="83" y="0.0" width="82" height="22"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tweet Content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fYF-cd-vOo" userLabel="Tweet Content">
+                                            <rect key="frame" x="83" y="26" width="276" height="88"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="7qy-UT-MZf" firstAttribute="top" secondItem="59U-2g-Mdt" secondAttribute="top" id="AN6-nB-dup"/>
+                                        <constraint firstItem="fYF-cd-vOo" firstAttribute="leading" secondItem="Ogx-RE-VCT" secondAttribute="trailing" constant="8" id="Ajy-jI-YLW"/>
+                                        <constraint firstItem="7qy-UT-MZf" firstAttribute="leading" secondItem="Ogx-RE-VCT" secondAttribute="trailing" constant="8" id="Q6Y-Jx-XOX"/>
+                                        <constraint firstItem="Ogx-RE-VCT" firstAttribute="leading" secondItem="59U-2g-Mdt" secondAttribute="leading" constant="10" id="Tbl-F7-2wk"/>
+                                        <constraint firstItem="fYF-cd-vOo" firstAttribute="bottom" secondItem="59U-2g-Mdt" secondAttribute="bottomMargin" constant="5" id="hpI-gA-TSv"/>
+                                        <constraint firstItem="fYF-cd-vOo" firstAttribute="trailing" secondItem="59U-2g-Mdt" secondAttribute="trailingMargin" id="i6K-aZ-G1o"/>
+                                        <constraint firstItem="fYF-cd-vOo" firstAttribute="top" secondItem="7qy-UT-MZf" secondAttribute="bottom" constant="4" id="lUA-H7-KnW"/>
+                                        <constraint firstItem="Ogx-RE-VCT" firstAttribute="top" secondItem="59U-2g-Mdt" secondAttribute="top" id="xsw-b2-0GE"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="profileImageView" destination="Ogx-RE-VCT" id="dvr-y2-6zA"/>
+                                    <outlet property="tweetContent" destination="fYF-cd-vOo" id="wYk-Pa-qrD"/>
+                                    <outlet property="usernameLabel" destination="7qy-UT-MZf" id="GWm-Qy-Ptb"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="fRY-ms-m3U" id="4Es-QF-au6"/>
+                            <outlet property="delegate" destination="fRY-ms-m3U" id="Puz-tl-p2b"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Home" id="XdP-d3-5K0">
+                        <barButtonItem key="leftBarButtonItem" title="Logout" id="H74-kR-zin">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="onLogout:" destination="fRY-ms-m3U" id="fay-Ug-6Fh"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Wnn-u6-za6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="837.60000000000002" y="-90.404797601199405"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="XIy-k6-4eI">
+            <objects>
+                <navigationController id="ylU-dJ-1dJ" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Zj4-Dt-s1x">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.55866932989999996" green="0.7919709881" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="fRY-ms-m3U" kind="relationship" relationship="rootViewController" id="lLQ-E7-pMb"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4ic-rH-q3t" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-46" y="-90"/>
+        </scene>
+    </scenes>
 </document>
