--- a/Twitter/Storyboards/Base.lproj/Main.storyboard
+++ b/Twitter/Storyboards/Base.lproj/Main.storyboard
@@ -170,21 +170,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="qhz-Uz-36g">
-                                <rect key="frame" x="0.0" y="64" width="375" height="128"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="What's happening?" translatesAutoresizingMaskIntoConstraints="NO" id="qhz-Uz-36g">
+                                <rect key="frame" x="0.0" y="67" width="375" height="128"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="wDe-78-xEQ"/>
+                                    <constraint firstAttribute="height" constant="128" id="PFD-4E-kgG"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="qhz-Uz-36g" firstAttribute="leading" secondItem="aMc-Ar-qfl" secondAttribute="leading" id="Oht-Bn-1l6"/>
-                            <constraint firstItem="qhz-Uz-36g" firstAttribute="top" secondItem="aMc-Ar-qfl" secondAttribute="top" id="jaq-vt-Jo2"/>
-                            <constraint firstItem="aMc-Ar-qfl" firstAttribute="trailing" secondItem="qhz-Uz-36g" secondAttribute="trailing" id="qRh-MP-FDk"/>
+                            <constraint firstItem="qhz-Uz-36g" firstAttribute="trailing" secondItem="aMc-Ar-qfl" secondAttribute="trailing" id="KKb-9e-j7i"/>
+                            <constraint firstItem="qhz-Uz-36g" firstAttribute="leading" secondItem="aMc-Ar-qfl" secondAttribute="leading" id="xN6-SM-ElL"/>
+                            <constraint firstItem="qhz-Uz-36g" firstAttribute="top" secondItem="aMc-Ar-qfl" secondAttribute="top" constant="3" id="zOy-Yc-Ih9"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="aMc-Ar-qfl"/>
                     </view>
@@ -208,7 +209,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rQQ-9d-diq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="511" y="1493"/>
+            <point key="canvasLocation" x="509.60000000000002" y="1492.8035982008996"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="XIy-k6-4eI">
